# todo

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: App.cpp  App.h  DbManager.cpp  DbManager.h  TODO.txt  main.cpp  mo.txt
